--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.6",
+    "crypto-js": "^4.2.0",
+    "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8"
