--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.6",
+    "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
     "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
