--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.6",
     "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
+    "email-validator": "^2.0.4",
     "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
