add mock localstorage

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VITE_CONSUMER_SECRET="cs_0f27bb75378c9f8701292e7bc1102c0d98a1e0c4"
 VITE_APP_REST_ACCOUNT="wordpress"
 VITE_APP_REST_PASSWORD="CBMg yjwQ 0hB3 275K jRan S8IN"
 VITE_APP_PREFIX_LOCALSTORAGE="reactwooc."
+VITE_TEST_USER="dev"
+VITE_TEST_PASSWORD="dev"
