--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ VITE_CONSUMER_KEY=""
 VITE_CONSUMER_SECRET=""
 VITE_APP_REST_ACCOUNT=""
 VITE_APP_REST_PASSWORD=""
-VITE_APP_PREFIX_LOCAL=""
+VITE_APP_PREFIX_LOCALSTORAGE=""
+VITE_TEST_USER=""
+VITE_TEST_PASSWORD=""
