--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
     "email-validator": "^2.0.4",
+    "jsdom": "^24.0.0",
     "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
