--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.6",
     "change-case": "^5.4.2",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.0.9",
     "email-validator": "^2.0.4",
     "jsdom": "^24.0.0",
     "oauth-1.0a": "^2.2.6",
@@ -35,6 +36,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.8",
