--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dompurify": "^3.0.9",
     "email-validator": "^2.0.4",
     "jsdom": "^24.0.0",
+    "lodash.isequal": "^4.5.0",
     "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.8",
