create separate components for sync create order and edit order

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/dompurify": "^3.0.5",
     "@types/lodash.isequal": "^4.5.8",
     "@types/react": "^18.2.43",
